# ratune

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  README.md  sample-config.toml
playterm/: Cargo.toml
playterm-subsonic/: Cargo.toml
playterm-subsonic/src/: client.rs  lib.rs  models.rs
playterm/src/: action.rs  app.rs  config.rs  desktop_notify.rs  fzf_picker.rs  keybinds.rs  library_index.rs  main.rs
playterm/src/ui/: browser.rs  home_tab.rs  kitty_art.rs  layout.rs  mod.rs  now_playing.rs  now_playing_format.rs  nowplaying_tab.rs  popup.rs  queue.rs  status_bar.rs
ratune/: Cargo.toml
ratune-player/: Cargo.toml
ratune-player/src/: adts_normalize.rs  engine.rs  lib.rs  stream.rs  tap.rs
ratune-player/tests/: aac_decode.rs  format_probe.rs  live_stream.rs  playlist_resolve.rs  spawn_aac_fail.rs  spawn_live.rs
ratune-scrobble/: Cargo.toml
ratune-scrobble/src/: auth.rs  lastfm.rs  lib.rs  threshold.rs  track.rs
ratune-subsonic/: Cargo.toml
ratune-subsonic/src/: client.rs  error.rs  lib.rs  models.rs
ratune/examples/: art_image_test.rs  radio_art_probe.rs
ratune/src/: action.rs  app.rs  cache.rs  color.rs  config.rs  debug.rs  favorites_cache.rs  fzf_picker.rs  history.rs  keybinds.rs  keyring_init.rs  lib.rs  library_index.rs  lyrics.rs  lyrics_cache.rs  main.rs  mouse_click.rs  mpris.rs  persist.rs  scrobble.rs  scrobble_queue.rs  state.rs  text_width.rs  theme.rs  tty.rs  visualizer.rs
ratune/src/ui/: albums.rs  art_prepare.rs  artists.rs  browser.rs  favorites_overlay.rs  folder_tracks.rs  folders.rs  home_tab.rs  kitty_art.rs  layout.rs  list_scroll.rs  mod.rs  now_playing.rs  now_playing_format.rs  nowplaying_tab.rs  playlist_overlay.rs  popup.rs  queue.rs  radio_nowplaying.rs  radio_popup.rs  status_bar.rs  tracks.rs  visualizer.rs
