[package]
name = "ratune-scrobble"
version = "0.1.0"
edition = "2021"
description = "Audioscrobbler / Last.fm scrobbling for ratune"
license = "MIT"
repository = "https://github.com/acmagn/ratune"
homepage = "https://github.com/acmagn/ratune"
readme = "../README.md"
keywords = ["lastfm", "librefm", "scrobble", "music"]
categories = ["multimedia::audio", "api-bindings"]
[package.metadata.release]
release = false

[dependencies]
anyhow = "1"
md5 = "0.7"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
